--- a/package.json
+++ b/package.json
@@ -10,17 +10,16 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "tailwindcss": "^3.3.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
     "pretest": "yarn install",
     "prestart": "yarn install",
-    "start": "PORT=8000 react-scripts start",
+    "start": "set PORT=8000 && react-scripts start",
     "build": "react-scripts build",
     "test": "./node_modules/.bin/react-scripts test --watchAll=false --verbose --env=jsdom",
     "eject": "react-scripts eject",
-    "build:css": "tailwindcss build -o ./dist/output.css"
+    "build:css": "tailwindcss build -o ./src/dist/output.css"
   },
   "eslintConfig": {
     "extends": [
@@ -42,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.3"
   }
 }
